--- a/package.json
+++ b/package.json
@@ -6,28 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc",
+    "typecheck:watch": "tsc -w"
   },
   "keywords": [],
   "author": "mmtandoc",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^3.6.0",
+    "axios": "^0.24.0",
+    "luxon": "^2.1.1",
     "next": "^11.1.2",
+    "rc-slider": "^9.7.4",
     "react": "^17.0.2",
-    "react-datepicker": "^4.2.1",
+    "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1"
+    "react-markdown": "^7.1.1",
+    "swr": "^1.1.0"
   },
   "devDependencies": {
+    "@types/luxon": "^2.0.7",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "@types/react-datepicker": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "babel-plugin-typescript-to-proptypes": "^2.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.0",
-    "prisma": "^3.0.2",
-    "typescript": "^4.4.2"
+    "prettier": "^2.5.0",
+    "prisma": "^3.6.0",
+    "typescript": "^4.5.2"
   }
 }
