--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc",
-    "typecheck:watch": "tsc -w"
+    "typecheck:watch": "tsc -w",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "mmtandoc",
@@ -26,6 +28,8 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/luxon": "^2.0.9",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.19",
@@ -36,6 +40,9 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "jest": "^27.5.1",
+    "next-router-mock": "^0.6.5",
     "prettier": "^2.5.1",
     "prisma": "^3.9.2",
     "typescript": "^4.5.5"
