--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^3.9.2",
     "axios": "^0.26.0",
+    "lodash.debounce": "^4.0.8",
     "luxon": "^2.3.0",
     "next": "^12.1.0",
     "rc-slider": "^9.7.5",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/luxon": "^2.0.9",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.19",
