--- a/package.json
+++ b/package.json
@@ -16,38 +16,40 @@
   "author": "mmtandoc",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^3.9.2",
-    "axios": "^0.26.0",
+    "@prisma/client": "^3.13.0",
+    "axios": "^0.27.2",
     "lodash.debounce": "^4.0.8",
-    "luxon": "^2.3.0",
-    "next": "^12.1.0",
-    "rc-slider": "^9.7.5",
+    "luxon": "^2.3.2",
+    "next": "^12.1.5",
+    "next-auth": "^4.3.4",
+    "rc-slider": "^10.0.0",
     "react": "^17.0.2",
-    "react-datepicker": "^4.6.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.0",
-    "swr": "^1.2.2"
+    "react-markdown": "^8.0.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.3",
     "@types/lodash.debounce": "^4.0.7",
-    "@types/luxon": "^2.0.9",
+    "@types/luxon": "^2.3.2",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^17.0.19",
+    "@types/node": "^17.0.31",
     "@types/react": "^17.0.39",
-    "@types/react-datepicker": "^4.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@types/react-datepicker": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
     "babel-plugin-typescript-to-proptypes": "^2.0.0",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "jest": "^27.5.1",
-    "next-router-mock": "^0.6.5",
-    "prettier": "^2.5.1",
-    "prisma": "^3.9.2",
-    "typescript": "^4.5.5"
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
+    "next-router-mock": "^0.6.7",
+    "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
+    "typescript": "^4.6.4"
   }
 }
