--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -115,3 +116,6 @@ dist
 
 # Idea
 .idea/
+
+# REST request files
+*.rest
